<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecurityContext</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_define_security">DefineSecurity</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="none">none</string>
    <string name="title_activity_security_item">SecurityItemActivity</string>

    <!-- SetPasswordActivity -->
    <string name="title_activity_set_password">Set Password</string>
    <string name="set_password">Set Password</string>
    <string name="set_password_repeat">Set Password Repeat</string>
    <string name="password_protection_question">Password Protection Question</string>
    <string name="password_protection_answer">Password Protection Answer</string>
    <string name="set_password_wrong">Input 4 number</string>
    <string name="set_password_repeat_wrong">Mismatching input password and repeat input password</string>
    <string name="password_protection_answer_wrong">Please input password protection answer</string>
    <string name="password_protection_question_wrong">Please input password protection question</string>

    <!-- AccessActivity -->
    <string name="title_activity_access">AccessActivity</string>
    <string name="check_password_wrong">Input password wrong</string>
    <string name="title_activity_security_context">SecurityContextActivity</string>
    <string name="input_password">Input password</string>
    <string name="title_activity_define_context">Define Context</string>

    <!-- DefineContextActivity -->
    <string name="input_context_name">Input context name</string>
    <string name="title_activity_define_context_item">Set Context Item</string>
    <string name="context_item">Context Item</string>

    <!-- DefineContextItemActivity -->
    <string name="time_context_item">Time</string>
    <string name="location_context_item">Location</string>
    <string name="title_activity_define_context_location">Set Location</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_define_context_time">Set Time</string>
    <string name="title_activity_settgings_item">SettgingsItemActivity</string>

    <!-- DefineContextTimeActivity -->
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="title_activity_define_context_location2">Set Location</string>
    <string name="get_location">Get Location</string>

    <!-- MyContext -->
    <string name="context_time">time</string>
    <string name="context_location">location</string>
    <string name="context_speed">speed</string>
    <string name="context_light">light</string>
    <string name="context_noise">noise</string>
    <string name="context_distance">distance</string>

    <!-- DefineContextSpeed -->
    <string name="title_activity_define_context_speed">Set Speed</string>
    <string-array name="context_speed_arrays">
        <item>slow</item>
        <item>normal</item>
        <item>fast</item>
    </string-array>

    <!-- DefineContextLight -->
    <string name="title_activity_define_context_light">Set Light</string>
    <string-array name="context_light_arrays">
        <item>dark</item>
        <item>dusk</item>
        <item>bright</item>
    </string-array>

    <!-- DefineContextNoise -->
    <string name="title_activity_define_context_noise">Set Noise</string>
    <string-array name="context_noise_arrays">
        <item>quiet</item>
        <item>normal</item>
        <item>din</item>
    </string-array>

    <!-- DefineContextDistance -->
    <string name="title_activity_define_context_distance">Set Distance</string>
    <string-array name="context_distance_arrays">
        <item>close</item>
        <item>far</item>
    </string-array>

    <!-- list_item_context -->
    <string name="weight">weight</string>
    <string name="title_activity_define_context_spinner">DefineContextSpinnerActivity</string>

    <!-- DefineSecurityActivity -->
    <string name="app">App</string>
    <string name="settings">Settings</string>
    <string name="file">File</string>
    <string name="title_activity_define_security_set">DefineSecuritySetActivity</string>

    <!-- DefineSecuritySetActivity -->
    <string-array name="sets">
        <item>Voice</item>
        <item>Bluetooth</item>
        <item>GPRS</item>
        <item>WiFi</item>
        <item>Shake</item>
        <item>GPS</item>
    </string-array>
    <string name="the_default">Default</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- SecurityContextActivity -->
    <string name="running">Running</string>
    <string name="stop">Stop</string>
    <string name="title_activity_app_check">AppCheckActivity</string>
</resources>
