<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.liaosong.app.securitycontext.ui.SetPasswordActivity">

    <EditText
        android:id="@+id/set_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/set_password"
        android:inputType="numberPassword"
        android:maxLength="4" />

    <EditText
        android:id="@+id/set_password_repeat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_password_repeat"
        android:inputType="numberPassword"
        android:maxLength="4" />

    <EditText
        android:id="@+id/password_protection_question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_protection_question"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password_protection_answer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_protection_answer"
        android:singleLine="true" />

    <Button
        android:id="@+id/set_password_done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="setPasswordDoneClick"
        android:text="@string/done" />

    <TextView
        android:id="@+id/set_password_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light" />
</LinearLayout>
