<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.liaosong.app.securitycontext.ui.DefineContextTimeActivity">

    <RelativeLayout
        android:id="@+id/timeLayout1"
        android:onClick="onSetStartTimeClick"
        android:paddingBottom="@dimen/text_padding"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"/>
        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:onClick="onSetEndTimeClick"
        android:id="@+id/timeLayout2"
        android:paddingBottom="@dimen/text_padding"
        android:layout_below="@id/timeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"/>
        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <EditText
        android:layout_below="@id/timeLayout2"
        android:id="@+id/editText_time"
        android:hint="@string/weight"
        android:paddingTop="@dimen/text_padding"
        android:textSize="@dimen/text_size"
        android:inputType="numberDecimal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <Button
        android:layout_alignParentBottom="true"
        android:onClick="onButtonDoneClick"
        android:text="@string/done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
